--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <div class="description">
     <div class="description__container">
-      <h2 class="description__title">Masterklassda siz:</h2>
+      <h3 class="description__title">Masterklassda siz:</h3>
       <div class="description__row">
         <div class="description__col">
           <h3 class="description__col-number">01</h3>
@@ -141,6 +141,10 @@
 
 
 
+
+  <style>
+    @font-face { font-family: Poppins; src: url(../fonts/Poppins-Bold.ttf) format("truetype"); font-weight: 700; font-display: swap; } @font-face { font-family: Poppins; src: url(../fonts/Poppins-Regular.ttf) format("truetype"); font-weight: 400; font-display: swap; } @font-face { font-family: Poppins; src: url(../fonts/Poppins-Medium.ttf) format("truetype"); font-weight: 500; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/Inter_18pt-ExtraBold.ttf) format("woff2"); font-weight: 900; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/bold.woff2) format("woff2"); font-weight: 700; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/regular.woff2) format("woff2"); font-weight: 400; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/light.woff2) format("woff2"); font-weight: 300; font-display: swap; } @font-face { font-family: "Bebas Neue"; src: url("../fonts/BebasNeue-Regular.ttf") format("truetype"); font-weight: 700; font-display: swap; } @font-face { font-family: "Bebas Neue"; src: url("../fonts/BebasNeue-Regular.ttf") format("truetype"); font-weight: 400; font-display: swap; } @font-face { font-family: "Big Shoulders Display"; src: url("../fonts/BigShouldersDisplay-Light.ttf") format("truetype"); font-weight: 300; font-display: swap; }
+  </style>
   <script defer src="./js/app.js"></script>
 </body>
 
