--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dastulash</title>
 
+
   <!-- Critical CSS inlined for faster rendering -->
   <style>
     /* Critical CSS for above-the-fold content */
@@ -238,7 +239,7 @@
         </h1>
 
         <div class="hero__center">
-          <img width="280" height="361" class="speakerImg" src="./images/speaker.avif" fetchpriority="high"
+          <img width="280" height="361" class="speakerImg" src="./images/speaker.avif" fetchpriority="high" loading="eager"
             alt="Muxtasar Abdullayeva" />
         </div>
 
@@ -342,28 +343,28 @@
   <style>
     @font-face {
       font-family: Poppins;
-      src: url(../fonts/Poppins-Bold.woff2) format("twoff2");
+      src: url(../fonts/Poppins-Bold.woff2) format("woff2");
       font-weight: 700;
       font-display: swap;
     }
 
     @font-face {
       font-family: Poppins;
-      src: url(../fonts/Poppins-Regular.woff2) format("twoff2");
+      src: url(../fonts/Poppins-Regular.woff2) format("woff2");
       font-weight: 400;
       font-display: swap;
     }
 
     @font-face {
       font-family: Poppins;
-      src: url(../fonts/Poppins-Medium.woff2) format("twoff2");
+      src: url(../fonts/Poppins-Medium.woff2) format("woff2");
       font-weight: 500;
       font-display: swap;
     }
 
     @font-face {
       font-family: Inter;
-      src: url(../fonts/Inter_18pt-ExtraBold.woff2) format("wwoff2");
+      src: url(../fonts/Inter_18pt-ExtraBold.woff2) format("woff2");
       font-weight: 900;
       font-display: swap;
     }
