--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
         </h1>
 
         <div class="hero__center">
-          <img width="280" height="361" class="speakerImg" src="./images/speaker.avif" fetchpriority="high" loading="eager"
-            alt="Muxtasar Abdullayeva" />
+          <img width="280" height="361" class="speakerImg" src="./images/speaker.avif" fetchpriority="high"
+            loading="eager" alt="Muxtasar Abdullayeva" />
         </div>
 
         <div class="hero__left_bottom">
@@ -341,6 +341,9 @@
 
 
   <style>
+    @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+    
     @font-face {
       font-family: Poppins;
       src: url(../fonts/Poppins-Bold.woff2) format("woff2");
