--- a/index.html
+++ b/index.html
@@ -9,205 +9,7 @@
 
   <!-- Critical CSS inlined for faster rendering -->
   <style>
-    /* Critical CSS for above-the-fold content */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.5;
-    }
-
-    .hero {
-      background-color: #f2f2f2;
-      padding-bottom: 69px;
-    }
-
-    .hero__container {
-      padding-top: 10px;
-      max-width: 1200px;
-      width: 100%;
-      margin: 0 auto;
-      padding-left: 20px;
-      padding-right: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 46px;
-      position: relative;
-    }
-
-    .hero__left {
-      padding-top: 140px;
-      max-width: 653px;
-      width: 100%;
-    }
-
-    .hero__top {
-      background-color: #dadada;
-      position: absolute;
-      top: 0;
-      max-width: 210px;
-      width: 100%;
-      padding: 14px 49px;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
-      display: flex;
-      align-items: center;
-      gap: 5px;
-    }
-
-    .hero__top-text {
-      font-weight: 400;
-      font-size: 16.13px;
-      line-height: 25px;
-      margin-bottom: 6px;
-      text-align: left;
-    }
-
-    .hero__top-date {
-      font-size: 16px;
-      font-weight: 600;
-      line-height: 30px;
-    }
-
-    .hero__top-date>span {
-      color: #9b1121;
-    }
-
-    .calendar__img {
-      min-width: 32px;
-    }
-
-    .hero__subtitle {
-      font-weight: 400;
-      font-size: 32px;
-      line-height: 48px;
-      color: #000000;
-      margin-bottom: 4px;
-    }
-
-    .hero__title {
-      width: 100%;
-      margin-top: 0;
-      margin-bottom: 9px;
-      max-width: 316px;
-      font-weight: 400;
-      font-style: Black;
-      font-size: 40px;
-      line-height: 110%;
-      text-wrap: wrap;
-      letter-spacing: 0%;
-      text-align: center;
-      vertical-align: middle;
-      text-transform: uppercase;
-    }
-
-    .hero__registerBtn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      max-width: 341px;
-      width: 100%;
-      background-color: #6A34FF;
-      border-radius: 21px;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 23.25px;
-      color: white;
-      text-align: center;
-      padding: 17px 0px;
-      box-shadow: 0px 4px 24px 0px #FFFFFF33 inset;
-      box-shadow: 0px -6px 14px 0px #FFFFFF26 inset;
-      margin-bottom: 24px;
-      border: none;
-      cursor: pointer;
-    }
-
-    .hero__btn_box-text {
-      font-weight: 400;
-      font-size: 20px;
-      line-height: 1.5;
-      color: #444444;
-      text-align: center;
-    }
-
-    .speakerImg {
-      max-width: 280px;
-      height: auto;
-      aspect-ratio: 280 / 361;
-      object-fit: cover;
-    }
-
-    /* Mobile styles for critical path */
-    @media (max-width: 1085px) {
-      .hero__right {
-        display: none;
-      }
-
-      .hero__container {
-        justify-content: center;
-        padding-top: 0;
-      }
-
-      .hero__top {
-        position: static;
-        padding: 5px 20px;
-        margin-bottom: 25px;
-        border-bottom-left-radius: 24px;
-        border-bottom-right-radius: 24px;
-        gap: 10px;
-      }
-
-      .calendar__img {
-        min-width: 24px;
-        width: 24px;
-      }
-
-      .hero__top-text {
-        font-size: 12px;
-        margin-bottom: 0;
-      }
-
-      .hero__top-date {
-        font-size: 20px;
-      }
-
-      .hero__left {
-        padding-top: 0px;
-        max-width: 320px;
-        text-align: center;
-      }
-
-      .hero__title {
-        font-size: 19px;
-        line-height: 1;
-        margin: 7px 0 12px 0;
-      }
-
-      .hero__subtitle {
-        font-size: 20px;
-        line-height: 30px;
-      }
-
-      .text-14 {
-        font-size: 14px;
-        line-height: 1.5;
-      }
-
-      .hero__registerBtn {
-        padding: 23px 20px;
-        border-radius: 15px;
-        margin-bottom: 12px;
-        font-size: 14px;
-        max-width: 307px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
+/* Critical CSS for above-the-fold content */ * { margin: 0; padding: 0; box-sizing: border-box; } body { font-family: Arial, sans-serif; line-height: 1.5; } .hero { background-color: #f2f2f2; padding-bottom: 69px; } .hero__container { padding-top: 10px; max-width: 1200px; width: 100%; margin: 0 auto; padding-left: 20px; padding-right: 20px; display: flex; align-items: center; justify-content: space-between; gap: 46px; position: relative; } .hero__left { padding-top: 140px; max-width: 653px; width: 100%; } .hero__top { background-color: #dadada; position: absolute; top: 0; max-width: 210px; width: 100%; padding: 14px 49px; border-bottom-left-radius: 24px; border-bottom-right-radius: 24px; display: flex; align-items: center; gap: 5px; } .hero__top-text { font-weight: 400; font-size: 16.13px; line-height: 25px; margin-bottom: 6px; text-align: left; } .hero__top-date { font-size: 16px; font-weight: 600; line-height: 30px; } .hero__top-date>span { color: #9b1121; } .calendar__img { min-width: 32px; } .hero__subtitle { font-weight: 400; font-size: 32px; line-height: 48px; color: #000000; margin-bottom: 4px; } .hero__title { width: 100%; margin-top: 0; margin-bottom: 9px; max-width: 316px; font-weight: 400; font-style: Black; font-size: 40px; line-height: 110%; text-wrap: wrap; letter-spacing: 0%; text-align: center; vertical-align: middle; text-transform: uppercase; } .hero__registerBtn { display: flex; align-items: center; justify-content: center; max-width: 341px; width: 100%; background-color: #6A34FF; border-radius: 21px; font-weight: 700; font-size: 18px; line-height: 23.25px; color: white; text-align: center; padding: 17px 0px; box-shadow: 0px 4px 24px 0px #FFFFFF33 inset; box-shadow: 0px -6px 14px 0px #FFFFFF26 inset; margin-bottom: 24px; border: none; cursor: pointer; } .hero__btn_box-text { font-weight: 400; font-size: 20px; line-height: 1.5; color: #444444; text-align: center; } .speakerImg { max-width: 280px; height: auto; aspect-ratio: 280 / 361; object-fit: cover; } /* Mobile styles for critical path */ @media (max-width: 1085px) { .hero__right { display: none; } .hero__container { justify-content: center; padding-top: 0; } .hero__top { position: static; padding: 5px 20px; margin-bottom: 25px; border-bottom-left-radius: 24px; border-bottom-right-radius: 24px; gap: 10px; } .calendar__img { min-width: 24px; width: 24px; } .hero__top-text { font-size: 12px; margin-bottom: 0; } .hero__top-date { font-size: 20px; } .hero__left { padding-top: 0px; max-width: 320px; text-align: center; } .hero__title { font-size: 19px; line-height: 1; margin: 7px 0 12px 0; } .hero__subtitle { font-size: 20px; line-height: 30px; } .text-14 { font-size: 14px; line-height: 1.5; } .hero__registerBtn { padding: 23px 20px; border-radius: 15px; margin-bottom: 12px; font-size: 14px; max-width: 307px; margin-left: auto; margin-right: auto; } }
   </style>
 
   <!-- Preload critical resources -->
@@ -221,7 +23,6 @@
   <noscript>
     <link rel="stylesheet" href="./css/main.css" />
   </noscript>
-
 
 </head>
 
@@ -341,78 +142,7 @@
 
 
   <style>
-    @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
-    
-    @font-face {
-      font-family: Poppins;
-      src: url(../fonts/Poppins-Bold.woff2) format("woff2");
-      font-weight: 700;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: Poppins;
-      src: url(../fonts/Poppins-Regular.woff2) format("woff2");
-      font-weight: 400;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: Poppins;
-      src: url(../fonts/Poppins-Medium.woff2) format("woff2");
-      font-weight: 500;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: Inter;
-      src: url(../fonts/Inter_18pt-ExtraBold.woff2) format("woff2");
-      font-weight: 900;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: Inter;
-      src: url(../fonts/bold.woff2) format("woff2");
-      font-weight: 700;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: Inter;
-      src: url(../fonts/regular.woff2) format("woff2");
-      font-weight: 400;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: Inter;
-      src: url(../fonts/light.woff2) format("woff2");
-      font-weight: 300;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: "Bebas Neue";
-      src: url("../fonts/BebasNeue-Regular.woff2") format("woff2");
-      font-weight: 700;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: "Bebas Neue";
-      src: url("../fonts/BebasNeue-Regular.woff2") format("woff2");
-      font-weight: 400;
-      font-display: swap;
-    }
-
-    @font-face {
-      font-family: "Big Shoulders Display";
-      src: url("../fonts/BigShouldersDisplay-Light.woff2") format("woff2");
-      font-weight: 300;
-      font-display: swap;
-    }
+    @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"); @font-face { font-family: Poppins; src: url(../fonts/Poppins-Bold.woff2) format("woff2"); font-weight: 700; font-display: swap; } @font-face { font-family: Poppins; src: url(../fonts/Poppins-Regular.woff2) format("woff2"); font-weight: 400; font-display: swap; } @font-face { font-family: Poppins; src: url(../fonts/Poppins-Medium.woff2) format("woff2"); font-weight: 500; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/Inter_18pt-ExtraBold.woff2) format("woff2"); font-weight: 900; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/bold.woff2) format("woff2"); font-weight: 700; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/regular.woff2) format("woff2"); font-weight: 400; font-display: swap; } @font-face { font-family: Inter; src: url(../fonts/light.woff2) format("woff2"); font-weight: 300; font-display: swap; } @font-face { font-family: "Bebas Neue"; src: url("../fonts/BebasNeue-Regular.woff2") format("woff2"); font-weight: 700; font-display: swap; } @font-face { font-family: "Bebas Neue"; src: url("../fonts/BebasNeue-Regular.woff2") format("woff2"); font-weight: 400; font-display: swap; } @font-face { font-family: "Big Shoulders Display"; src: url("../fonts/BigShouldersDisplay-Light.woff2") format("woff2"); font-weight: 300; font-display: swap; }
   </style>
   <script defer src="./js/app.js"></script>
 </body>
